--- a/kaia_desc/CMakeLists.txt
+++ b/kaia_desc/CMakeLists.txt
@@ -1,31 +1,17 @@
-################################################################################
-# Set minimum required version of cmake, project name and compile options
-################################################################################
-cmake_minimum_required(VERSION 3.5)
-project(turtlebot3_description)
-
-if(NOT CMAKE_CXX_STANDARD)
-  set(CMAKE_CXX_STANDARD 17)
-endif()
+cmake_minimum_required(VERSION 3.8)
+project(kaia_desc)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-################################################################################
-# Find ament packages and libraries for ament and system dependencies
-################################################################################
+
 find_package(ament_cmake REQUIRED)
 find_package(urdf REQUIRED)
 
-################################################################################
-# Install
-################################################################################
+
 install(DIRECTORY meshes rviz urdf
   DESTINATION share/${PROJECT_NAME}
 )
 
-################################################################################
-# Macro for ament package
-################################################################################
 ament_package()
