--- a/kaia_desc/package.xml
+++ b/kaia_desc/package.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>turtlebot3_description</name>
-  <version>2.1.5</version>
-  <description>
-    3D models of the TurtleBot3 for simulation and visualization
-  </description>
-  <maintainer email="willson@robotis.com">Will Son</maintainer>
+  <name>kaia_desc</name>
+  <version>0.0.0</version>
+  <description>Kaia.ai bots 3D models for simulation and visualization</description>
+
+  <maintainer email="iliao@remake.ai">Ilia O.</maintainer>
   <license>Apache 2.0</license>
-  <url type="website">http://turtlebot3.robotis.com</url>
-  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3</url>
-  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3/issues</url>
-  <author email="thlim@robotis.com">Darby Lim</author>
-  <author email="pyo@robotis.com">Pyo</author>
+  <url type="website">http://kaia.robotis.com</url>
+  <url type="repository">https://github.com/kaiaai/kaia_bots</url>
+  <url type="bugtracker">https://github.com/kaiaai/kaia_bots/issues</url>
+  <author email="iliao@remake.ai">Ilia O.</author>
+
   <buildtool_depend>ament_cmake</buildtool_depend>
+
   <depend>urdf</depend>
   <export>
     <build_type>ament_cmake</build_type>
