--- a/kaia_launch/package.xml
+++ b/kaia_launch/package.xml
@@ -5,8 +5,9 @@
   <version>0.0.0</version>
 
   <description>Kaia.ai ROS2 system launch scripts</description>
-  <maintainer email="ilia.o@remake.ai">Ilia O.</maintainer>
+  <maintainer email="iliao@remake.ai">Ilia O.</maintainer>
   <license>Apache-2.0</license>
+  <author email="iliao@remake.ai">Ilia O.</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <exec_depend>ros2launch</exec_depend>
