--- a/kaia_navigation/CMakeLists.txt
+++ b/kaia_navigation/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.8)
-project(kaia_desc)
+project(kaia_navigation)
+
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -7,11 +8,12 @@ endif()
 
 
 find_package(ament_cmake REQUIRED)
-find_package(urdf REQUIRED)
 
 
-install(DIRECTORY meshes rviz urdf
+install(
+  DIRECTORY launch map param rviz
   DESTINATION share/${PROJECT_NAME}
 )
+
 
 ament_package()
