--- a/kaia_teleop/package.xml
+++ b/kaia_teleop/package.xml
@@ -3,13 +3,13 @@
 <package format="3">
   <name>kaia_teleop</name>
   <version>0.0.0</version>
-  <description>Teleoperation node using keyboard for Kaia.ai bots</description>
+  <description>Teleoperation node using keyboard for Kaia.ai robots</description>
 
   <maintainer email="iliao@remake.ai">Ilia O.</maintainer>
   <license>Apache 2.0</license>
   <url type="website">https://kaia.ai</url>
-  <url type="repository">https://github.com/kaiaai/kaia_bots</url>
-  <url type="bugtracker">https://github.com/kaiaai/kaia_bots/issues</url>
+  <url type="repository">https://github.com/kaiaai/kaia</url>
+  <url type="bugtracker">https://github.com/kaiaai/kaia/issues</url>
   <author email="iliao@remake.ai">Ilia O.</author>
 
   <exec_depend>geometry_msgs</exec_depend>
