--- a/kaia_cartographer/package.xml
+++ b/kaia_cartographer/package.xml
@@ -8,8 +8,8 @@
   <maintainer email="iliao@remake.ai">Ilia O.</maintainer>
   <license>Apache 2.0</license>
   <url type="website">https://kaia.ai</url>
-  <url type="repository">https://github.com/kaiaai/kaia_bot</url>
-  <url type="bugtracker">https://github.com/kaiaai/kaia_bot/issues</url>
+  <url type="repository">https://github.com/kaiaai/kaia</url>
+  <url type="bugtracker">https://github.com/kaiaai/kaia/issues</url>
   <author email="iliao@remake.ai">Ilia O.</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
