--- a/kaia_description/CMakeLists.txt
+++ b/kaia_description/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(kaia_nav2)
-
+project(kaia_description)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -8,12 +7,11 @@ endif()
 
 
 find_package(ament_cmake REQUIRED)
+find_package(urdf REQUIRED)
 
 
-install(
-  DIRECTORY launch map param rviz
+install(DIRECTORY meshes rviz urdf
   DESTINATION share/${PROJECT_NAME}
 )
-
 
 ament_package()
