--- a/kaia_telemetry/CMakeLists.txt
+++ b/kaia_telemetry/CMakeLists.txt
@@ -1,15 +1,32 @@
+# https://docs.ros.org/en/galactic/Tutorials/Beginner-Client-Libraries/Custom-ROS2-Interfaces.html
 cmake_minimum_required(VERSION 3.8)
-project(kaia_launch)
+project(kaia_telemetry)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-# find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+
+find_package(rclcpp REQUIRED)
+find_package(kaia_msgs REQUIRED)
+find_package(nav_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(tf2_msgs REQUIRED)
+find_package(tf2_ros REQUIRED)
+find_package(tf2 REQUIRED)
+
+add_executable(telem_test_pub src/telem_test_pub.cpp)
+ament_target_dependencies(telem_test_pub rclcpp kaia_msgs)
+
+add_executable(telem src/telem.cpp)
+ament_target_dependencies(telem rclcpp kaia_msgs nav_msgs sensor_msgs geometry_msgs tf2_msgs tf2_ros tf2)
+
+install(TARGETS
+  telem_test_pub
+  telem
+  DESTINATION lib/${PROJECT_NAME})
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -22,11 +39,5 @@ if(BUILD_TESTING)
   set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
-
-# Install launch files.
-install(DIRECTORY
-  launch
-  DESTINATION share/${PROJECT_NAME}/
-)
 
 ament_package()
