--- a/kaia_telemetry/package.xml
+++ b/kaia_telemetry/package.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>kaia_telem</name>
+  <name>kaia_telemetry</name>
   <version>0.0.0</version>
-  <description>Kaia.ai ESP32 Micro-ROS telemetry</description>
+  <description>Kaia.ai robots ESP32 Micro-ROS telemetry</description>
   <maintainer email="ilia.o@remake.ai">Ilia O.</maintainer>
   <license>Apache-2.0</license>
+  <url type="website">https://kaia.ai</url>
+  <url type="repository">https://github.com/kaiaai/kaia</url>
+  <url type="bugtracker">https://github.com/kaiaai/kaia/issues</url>
+  <author email="iliao@remake.ai">Ilia O.</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <depend>rclcpp</depend>
@@ -17,10 +21,6 @@
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
-
-  <!-- build_depend>rosidl_default_generators</build_depend -->
-  <!-- exec_depend>rosidl_default_runtime</exec_depend -->
-  <!-- member_of_group>rosidl_interface_packages</member_of_group -->
 
   <export>
     <build_type>ament_cmake</build_type>
