--- a/kaia_bringup/CMakeLists.txt
+++ b/kaia_bringup/CMakeLists.txt
@@ -21,7 +21,7 @@ if(BUILD_TESTING)
 endif()
 
 install(
-  DIRECTORY launch param script rviz
+  DIRECTORY launch param rviz
   DESTINATION share/${PROJECT_NAME}
 )
 
