--- a/kaia/package.xml
+++ b/kaia/package.xml
@@ -15,7 +15,7 @@
 
   <exec_depend>kaia_bringup</exec_depend>
   <exec_depend>kaia_cartographer</exec_depend>
-  <exec_depend>kaia_description</exec_depend>
+  <exec_depend>kaia_descriptions</exec_depend>
   <exec_depend>kaia_navigation</exec_depend>
   <exec_depend>kaia_teleop</exec_depend>
   <exec_depend>kaia_telemetry</exec_depend>
