--- a/kaia_bringup/package.xml
+++ b/kaia_bringup/package.xml
@@ -17,7 +17,7 @@
   <exec_depend>hls_lfcd_lds_driver</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>rviz2</exec_depend>
-  <exec_depend>kaia_description</exec_depend>
+  <exec_depend>kaia_descriptions</exec_depend>
   <exec_depend>kaia_node</exec_depend>
   <exec_depend>ros2launch</exec_depend>
   <exec_depend>kaia_telemetry</exec_depend>
@@ -26,6 +26,8 @@
   <exec_depend>joint_state_publisher_gui</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>xacro</exec_depend>
+  <exec_depend>cartographer_ros</exec_depend>
+  <exec_depend>nav2_bringup</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
