--- a/kaia_teleop/package.xml
+++ b/kaia_teleop/package.xml
@@ -4,7 +4,6 @@
   <name>kaia_teleop</name>
   <version>0.0.0</version>
   <description>Control Kaia.ai robots using a keyboard</description>
-
   <maintainer email="iliao@remake.ai">Ilia O.</maintainer>
   <license>Apache 2.0</license>
   <url type="website">https://kaia.ai</url>
@@ -12,8 +11,14 @@
   <url type="bugtracker">https://github.com/kaiaai/kaia/issues</url>
   <author email="iliao@remake.ai">Ilia O.</author>
 
+  <depend>rclpy</depend>
+
   <exec_depend>geometry_msgs</exec_depend>
-  <exec_depend>rclpy</exec_depend>
+
+  <test_depend>ament_copyright</test_depend>
+  <test_depend>ament_flake8</test_depend>
+  <test_depend>ament_pep257</test_depend>
+  <test_depend>python3-pytest</test_depend>
 
   <export>
     <build_type>ament_python</build_type>
