--- a/kaia_bringup/CMakeLists.txt
+++ b/kaia_bringup/CMakeLists.txt
@@ -25,4 +25,8 @@ install(
   DESTINATION share/${PROJECT_NAME}
 )
 
+install(
+  PROGRAMS script/watch_urdf.sh
+  DESTINATION lib/${PROJECT_NAME})
+
 ament_package()
