--- a/kaia/package.xml
+++ b/kaia/package.xml
@@ -14,7 +14,8 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <exec_depend>kaia_bringup</exec_depend>
-  <exec_depend>kaia_descriptions</exec_depend>
+  <exec_depend>kaiaai_snoopy</exec_depend>
+  <exec_depend>kaiaai_loki</exec_depend>
   <exec_depend>kaia_navigation</exec_depend>
   <exec_depend>kaia_teleop</exec_depend>
   <exec_depend>kaia_telemetry</exec_depend>
