--- a/kaiaai_bringup/package.xml
+++ b/kaiaai_bringup/package.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>kaia_bringup</name>
+  <name>kaiaai_bringup</name>
   <version>0.0.0</version>
-  <description>ROS2 scripts to start Kaia.ai robots</description>
+  <description>ROS2 scripts to start Kaia.ai-compatible robots</description>
 
   <maintainer email="iliao@remake.ai">Ilia O.</maintainer>
   <license>Apache 2.0</license>
   <url type="website">https://kaia.ai</url>
-  <url type="repository">https://github.com/kaiaai/kaia</url>
-  <url type="bugtracker">https://github.com/kaiaai/kaia/issues</url>
+  <url type="repository">https://github.com/kaiaai/kaiaai</url>
+  <url type="bugtracker">https://github.com/kaiaai/kaiaai/issues</url>
   <author email="iliao@remake.ai">Ilia O.</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
@@ -19,9 +19,9 @@
   <exec_depend>rviz2</exec_depend>
   <exec_depend>kaiaai_snoopy</exec_depend>
   <exec_depend>kaiaai_loki</exec_depend>
-  <exec_depend>kaia_node</exec_depend>
+  <exec_depend>kaiaai_node</exec_depend>
   <exec_depend>ros2launch</exec_depend>
-  <exec_depend>kaia_telemetry</exec_depend>
+  <exec_depend>kaiaai_telemetry</exec_depend>
 
   <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>joint_state_publisher_gui</exec_depend>
