--- a/kaiaai_telemetry/CMakeLists.txt
+++ b/kaiaai_telemetry/CMakeLists.txt
@@ -1,6 +1,6 @@
 # https://docs.ros.org/en/galactic/Tutorials/Beginner-Client-Libraries/Custom-ROS2-Interfaces.html
 cmake_minimum_required(VERSION 3.8)
-project(kaia_telemetry)
+project(kaiaai_telemetry)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -9,7 +9,7 @@ endif()
 find_package(ament_cmake REQUIRED)
 
 find_package(rclcpp REQUIRED)
-find_package(kaia_msgs REQUIRED)
+find_package(kaiaai_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
@@ -18,10 +18,10 @@ find_package(tf2_ros REQUIRED)
 find_package(tf2 REQUIRED)
 
 add_executable(telem_test_pub src/telem_test_pub.cpp)
-ament_target_dependencies(telem_test_pub rclcpp kaia_msgs)
+ament_target_dependencies(telem_test_pub rclcpp kaiaai_msgs)
 
 add_executable(telem src/telem.cpp)
-ament_target_dependencies(telem rclcpp kaia_msgs nav_msgs sensor_msgs geometry_msgs tf2_msgs tf2_ros tf2)
+ament_target_dependencies(telem rclcpp kaiaai_msgs nav_msgs sensor_msgs geometry_msgs tf2_msgs tf2_ros tf2)
 
 install(TARGETS
   telem_test_pub
