--- a/kaiaai_telemetry/package.xml
+++ b/kaiaai_telemetry/package.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>kaia_telemetry</name>
+  <name>kaiaai_telemetry</name>
   <version>0.0.0</version>
-  <description>Kaia.ai robots ESP32 Micro-ROS telemetry</description>
+  <description>Kaia.ai-compatible robots ESP32 Micro-ROS telemetry</description>
   <maintainer email="ilia.o@remake.ai">Ilia O.</maintainer>
   <license>Apache-2.0</license>
   <url type="website">https://kaia.ai</url>
-  <url type="repository">https://github.com/kaiaai/kaia</url>
-  <url type="bugtracker">https://github.com/kaiaai/kaia/issues</url>
+  <url type="repository">https://github.com/kaiaai/kaiaai</url>
+  <url type="bugtracker">https://github.com/kaiaai/kaiaai/issues</url>
   <author email="iliao@remake.ai">Ilia O.</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <depend>rclcpp</depend>
-  <depend>kaia_msgs</depend>
+  <depend>kaiaai_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>geometry_msgs</depend>
