--- a/kaiaai/package.xml
+++ b/kaiaai/package.xml
@@ -3,7 +3,7 @@
 <package format="3">
   <name>kaiaai</name>
   <version>0.0.0</version>
-  <description>ROS2 packages for Kaia.ai-compatible robots</description>
+  <description>ROS2 packages for Kaia.ai software platform compatible robots</description>
   <maintainer email="iliao@remake.ai">Ilia O.</maintainer> 
   <license>Apache 2.0</license>
   <url type="website">https://kaia.ai</url>
@@ -14,8 +14,8 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <exec_depend>kaiaai_bringup</exec_depend>
-  <exec_depend>kaiaai_snoopy</exec_depend>
-  <exec_depend>kaiaai_loki</exec_depend>
+  <exec_depend>makerspet_snoopy</exec_depend>
+  <exec_depend>makerspet_loki</exec_depend>
   <exec_depend>kaiaai_navigation</exec_depend>
   <exec_depend>kaiaai_teleop</exec_depend>
   <exec_depend>kaiaai_telemetry</exec_depend>
