--- a/kaiaai_teleop/package.xml
+++ b/kaiaai_teleop/package.xml
@@ -4,12 +4,12 @@
   <name>kaiaai_teleop</name>
   <version>0.0.0</version>
   <description>Control Kaia.ai-compatible robots using a keyboard</description>
-  <maintainer email="iliao@remake.ai">Ilia O.</maintainer>
+  <maintainer email="iliao@kaia.ai">Ilia O.</maintainer>
   <license>Apache 2.0</license>
   <url type="website">https://kaia.ai</url>
   <url type="repository">https://github.com/kaiaai/kaiaai</url>
   <url type="bugtracker">https://github.com/kaiaai/kaiaai/issues</url>
-  <author email="iliao@remake.ai">Ilia O.</author>
+  <author email="iliao@kaia.ai">Ilia O.</author>
 
   <depend>rclpy</depend>
 
