--- a/kaiaai_telemetry/config/telem.yaml
+++ b/kaiaai_telemetry/config/telem.yaml
@@ -9,16 +9,16 @@ kaiaai_telemetry_node:
 #      lds_model: "YDLIDAR-X4"
 
     laser_sensor:
-      model:            ['YDLIDAR-X4', 'LDS02RR']
-      angle_offset_deg: [         0.0,    -180.0]
-      pub_scan_size:    [         561,       360]
-      range_min_meters: [        0.15,      0.15]
-      range_max_meters: [        12.0,       6.0]
-      # 'neato-xv-11', 'lds02rr', 'ydlidar-x2', 'rplidar-a1m8', 'hls-lfcd2-lds-01', 'ydlidar-x3-pro'
-      #           0.0,    -180.0,          0.0,            0.0,                0.0,              0.0
-      #           360,       360,          561,            360,                360,              360]
-      #          0.15,      0.15,          0.1,           0.15,               0.12,             0.12]
-      #           6.0,       6.0,          8.0,           12.0,                3.5,             12.0]
+      model:            ['YDLIDAR-X4', 'LDS02RR', 'YDLIDAR-X2']
+      angle_offset_deg: [         0.0,    -180.0,          0.0]
+      pub_scan_size:    [         720,       360,          720]
+      range_min_meters: [        0.15,      0.15,          0.1]
+      range_max_meters: [        12.0,       6.0,          8.0]
+      # 'neato-xv-11', 'rplidar-a1m8', 'hls-lfcd2-lds-01', 'ydlidar-x3-pro'
+      #           0.0,            0.0,                0.0,              0.0
+      #           360,            360,                360,              360
+      #          0.15,           0.15,               0.12,             0.12
+      #           6.0,           12.0,                3.5,             12.0
 
     telemetry:
       topic_name_sub: "telemetry"
