--- a/kaiaai_telemetry/CMakeLists.txt
+++ b/kaiaai_telemetry/CMakeLists.txt
@@ -28,6 +28,10 @@ install(TARGETS
   telem
   DESTINATION lib/${PROJECT_NAME})
 
+install(DIRECTORY config
+  DESTINATION share/${PROJECT_NAME}
+)
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
