--- a/kaiaai_telemetry/config/telem.yaml
+++ b/kaiaai_telemetry/config/telem.yaml
@@ -6,21 +6,20 @@ kaiaai_telemetry_node:
       topic_name_pub: "scan"
       frame_id: "base_scan"
 #      lds_model: "LDS02RR"
-#      lds_model: "YDLIDAR-X4"
 
     laser_sensor:
-      model:            ['YDLIDAR-X4','XIAOMI-LDS02RR','YDLIDAR-X2-X2L','YDLIDAR-X3-PRO','YDLIDAR-X3-PRO','YDLIDAR-X3','NEATO-XV11','RPLIDAR-A1','DELTA-2G','DELTA-2A']
-      angle_offset_deg: [         0.0,          -180.0,             0.0,             0.0,             0.0,         0.0,      -180.0,      -180.0,     -90.0,     -90.0]
-      pub_scan_size:    [         720,             360,             720,             720,             720,         720,         360,         720,       360,       360]
-      clockwise:        [        true,            true,            true,            true,            true,        true,       false,        true,      true,      true]
-      range_min_meters: [        0.15,            0.15,             0.1,            0.12,            0.12,        0.12,        0.15,        0.15,      0.15,      0.15]
-      range_max_meters: [        12.0,             6.0,             8.0,             8.0,             8.0,         8.0,         6.0,        12.0,       5.0,       5.0]
-      # 'HLS-LFCD2', 'XIAOMI-LDS01RR', 'LDROBOT-LD14P', 'LDROBOT-LD20'
-      #         0.0,              0.0,
-      #         360,              360,
-      #        true,             true, 
-      #        0.12,             0.15,             0.1
-      #         3.5,              9.0,             8.0
+      model:            ['YDLIDAR-X4','XIAOMI-LDS02RR','YDLIDAR-X2-X2L','YDLIDAR-X3-PRO','YDLIDAR-X3-PRO','YDLIDAR-X3','NEATO-XV11','RPLIDAR-A1','DELTA-2G','DELTA-2A','LDROBOT-LD14P']
+      angle_offset_deg: [         0.0,          -180.0,             0.0,             0.0,             0.0,         0.0,      -180.0,      -180.0,     -90.0,     -90.0,            0.0]
+      pub_scan_size:    [         720,             360,             720,             720,             720,         720,         360,         720,       360,       360,            720]
+      clockwise:        [        true,            true,            true,            true,            true,        true,       false,        true,      true,      true,           true]
+      range_min_meters: [        0.15,            0.15,             0.1,            0.12,            0.12,        0.12,        0.15,        0.15,      0.15,      0.15,            0.1]
+      range_max_meters: [        12.0,             6.0,             8.0,             8.0,             8.0,         8.0,         6.0,        12.0,       5.0,       5.0,            8.0]
+      # 'HLS-LFCD2', 'HLS-LFCD3', 'XIAOMI-LDS01RR', 'LDROBOT-LD20'
+      #         0.0,         0.0,              0.0,
+      #         360,         360,              360,
+      #        true,        true,             true,
+      #        0.12,        0.16,             0.15,
+      #         3.5,         8.0,              9.0,
 
     telemetry:
       topic_name_sub: "telemetry"
